# docs/swagger.json
@@ -1,13 +1,135 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "API documentation for Management System",
+        "description": "API documentation for Management System\n# Error codes\n### \u003cspan style=\"font-size:18px\"\u003e- \u003ccode\u003e120001\u003c/code\u003e: Wrong pagination query\u003c/span\u003e\n### \u003cspan style=\"font-size:18px\"\u003e- \u003ccode\u003e120002\u003c/code\u003e: Wrong query\u003c/span\u003e\n### \u003cspan style=\"font-size:18px\"\u003e- \u003ccode\u003e120003\u003c/code\u003e: Wrong body\u003c/span\u003e\n### \u003cspan style=\"font-size:18px\"\u003e- \u003ccode\u003e121101\u003c/code\u003e: Email template not found\u003c/span\u003e\n### \u003cspan style=\"font-size:18px\"\u003e- \u003ccode\u003e121204\u003c/code\u003e: Invalid order\u003c/span\u003e\n### \u003cspan style=\"font-size:18px\"\u003e- \u003ccode\u003e121205\u003c/code\u003e: Email template ID is missing\u003c/span\u003e\n### \u003cspan style=\"font-size:18px\"\u003e- \u003ccode\u003e121206\u003c/code\u003e: Invalid email template ID\u003c/span\u003e\n### \u003cspan style=\"font-size:18px\"\u003e- \u003ccode\u003e121207\u003c/code\u003e: Email template not found\u003c/span\u003e\n### \u003cspan style=\"font-size:18px\"\u003e- \u003ccode\u003e121208\u003c/code\u003e: Stage not found\u003c/span\u003e\n### \u003cspan style=\"font-size:18px\"\u003e- \u003ccode\u003e121301\u003c/code\u003e: Reject reason not found\u003c/span\u003e\n### \u003cspan style=\"font-size:18px\"\u003e- \u003ccode\u003e121401\u003c/code\u003e: Question set not found\u003c/span\u003e\n### \u003cspan style=\"font-size:18px\"\u003e- \u003ccode\u003e121501\u003c/code\u003e: Hiring team not found\u003c/span\u003e\n### \u003cspan style=\"font-size:18px\"\u003e- \u003ccode\u003e121502\u003c/code\u003e: User not found\u003c/span\u003e\n### \u003cspan style=\"font-size:18px\"\u003e- \u003ccode\u003e122101\u003c/code\u003e: Position not found\u003c/span\u003e\n### \u003cspan style=\"font-size:18px\"\u003e- \u003ccode\u003e122201\u003c/code\u003e: Required field\u003c/span\u003e\n### \u003cspan style=\"font-size:18px\"\u003e- \u003ccode\u003e122202\u003c/code\u003e: Stage not found\u003c/span\u003e\n### \u003cspan style=\"font-size:18px\"\u003e- \u003ccode\u003e122203\u003c/code\u003e: Black list or duplicate\u003c/span\u003e\n### \u003cspan style=\"font-size:18px\"\u003e- \u003ccode\u003e122204\u003c/code\u003e: Pool not found\u003c/span\u003e\n### \u003cspan style=\"font-size:18px\"\u003e- \u003ccode\u003e122205\u003c/code\u003e: Candidate not found\u003c/span\u003e\n### \u003cspan style=\"font-size:18px\"\u003e- \u003ccode\u003e122301\u003c/code\u003e: Label not found\u003c/span\u003e",
         "title": "Management System API",
         "contact": {},
         "version": "1.0"
     },
     "basePath": "/",
     "paths": {
+        "/auth/login": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Login",
+                "parameters": [
+                    {
+                        "description": "Credentials",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/interfaces.LoginInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/interfaces.TokenPair"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/logout": {
+            "post": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Logout",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Refresh token",
+                        "name": "refreshToken",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/refresh": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Refresh token",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Refresh token",
+                        "name": "refreshToken",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/interfaces.TokenPair"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/register": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Register",
+                "parameters": [
+                    {
+                        "description": "Register",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/interfaces.RegisterInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/roles": {
             "get": {
                 "description": "Lấy danh sách roles với phân trang và filter",
@@ -250,6 +372,45 @@
         }
     },
     "definitions": {
+        "interfaces.LoginInput": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "interfaces.RegisterInput": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "fullName": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "interfaces.TokenPair": {
+            "type": "object",
+            "properties": {
+                "accessToken": {
+                    "type": "string"
+                },
+                "refreshToken": {
+                    "type": "string"
+                }
+            }
+        },
         "model.Role": {
             "type": "object",
             "properties": {
